fix : jacoco-maven-plugin and maven-surefire-plugin